# src/types/user.ts
@@ -1,5 +1,6 @@
 export interface User {
     id: string;
+    username: string;
     email: string;
     name: string;
     isActive: boolean;
